Bug 426801 - Karbon crashed after tried to "select all" the items
Summary: Karbon crashed after tried to "select all" the items
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-09-21 08:00 UTC by daniel
Modified: 2023-03-09 08:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.13 KB, text/plain)
2023-03-09 08:49 UTC, Felix Urbasik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description daniel 2020-09-21 08:00:03 UTC
Application: karbon (3.2.0)

Qt Version: 5.15.0
Frameworks Version: 5.74.0
Operating System: Linux 5.4.0-47-generic x86_64
Windowing system: X11
Distribution: KDE neon User Edition 5.19

-- Information about the crash:
- What I was doing when the application crashed:

Just finished to draw something in Karbon, then tried to delete everything. Went to "Edit" and "select all" than Karbon crashed.

-- Backtrace:
Application: Karbon (karbon), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f81dec29afd in KoShapeContainer::shapes() const () from /usr/lib/x86_64-linux-gnu/libflake.so.17
#5  0x00007f81d1ca4a87 in KarbonView::editSelectAll() () from /usr/lib/x86_64-linux-gnu/libkarbonui.so.17
#6  0x00007f81df7075e0 in doActivate<false> (sender=0x55bb3d84f4d0, signal_index=4, argv=0x7ffc94866b50) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#7  0x00007f81df700977 in QMetaObject::activate (sender=sender@entry=0x55bb3d84f4d0, m=m@entry=0x7f81e003f280 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffc94866b50) at kernel/qobject.cpp:3946
#8  0x00007f81dfb287f6 in QAction::triggered (this=this@entry=0x55bb3d84f4d0, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#9  0x00007f81dfb2aec8 in QAction::activate (this=0x55bb3d84f4d0, event=<optimized out>) at kernel/qaction.cpp:1161
#10 0x00007f81dfcb5712 in QMenuPrivate::activateCausedStack (this=this@entry=0x55bb3d8d6ef0, causedStack=..., action=action@entry=0x55bb3d84f4d0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1353
#11 0x00007f81dfcbcdbe in QMenuPrivate::activateAction (this=this@entry=0x55bb3d8d6ef0, action=action@entry=0x55bb3d84f4d0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1430
#12 0x00007f81dfcbe052 in QMenu::mouseReleaseEvent (this=0x55bb3bc898f0, e=0x7ffc948672b0) at widgets/qmenu.cpp:2927
#13 0x00007f81dfb71db6 in QWidget::event (this=this@entry=0x55bb3bc898f0, event=event@entry=0x7ffc948672b0) at kernel/qwidget.cpp:8671
#14 0x00007f81dfcc065b in QMenu::event (this=0x55bb3bc898f0, e=0x7ffc948672b0) at widgets/qmenu.cpp:3049
#15 0x00007f81dfb2ecc3 in QApplicationPrivate::notify_helper (this=this@entry=0x55bb3b4cf600, receiver=receiver@entry=0x55bb3bc898f0, e=e@entry=0x7ffc948672b0) at kernel/qapplication.cpp:3671
#16 0x00007f81dfb37ec3 in QApplication::notify (this=<optimized out>, receiver=0x55bb3bc898f0, e=0x7ffc948672b0) at kernel/qapplication.cpp:3115
#17 0x00007f81e01d583d in KoApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libkomain.so.17
#18 0x00007f81df6d06aa in QCoreApplication::notifyInternal2 (receiver=0x55bb3bc898f0, event=0x7ffc948672b0) at ../../include/QtCore/5.15.0/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#19 0x00007f81dfb36fd7 in QApplicationPrivate::sendMouseEvent (receiver=0x55bb3bc898f0, event=event@entry=0x7ffc948672b0, alienWidget=0x0, nativeWidget=0x55bb3bc898f0, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2603
#20 0x00007f81dfb8da86 in QWidgetWindow::handleMouseEvent (this=0x55bb3e093030, event=0x7ffc948677b0) at /usr/include/c++/9/bits/atomic_base.h:413
#21 0x00007f81dfb904dc in QWidgetWindow::event (event=0x7ffc948677b0, this=0x55bb3e093030) at kernel/qwidgetwindow.cpp:295
#22 QWidgetWindow::event (this=0x55bb3e093030, event=0x7ffc948677b0) at kernel/qwidgetwindow.cpp:238
#23 0x00007f81dfb2ecc3 in QApplicationPrivate::notify_helper (this=this@entry=0x55bb3b4cf600, receiver=receiver@entry=0x55bb3e093030, e=e@entry=0x7ffc948677b0) at kernel/qapplication.cpp:3671
#24 0x00007f81dfb37c70 in QApplication::notify (this=0x7ffc94867be0, receiver=0x55bb3e093030, e=0x7ffc948677b0) at kernel/qapplication.cpp:3417
#25 0x00007f81e01d583d in KoApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libkomain.so.17
#26 0x00007f81df6d06aa in QCoreApplication::notifyInternal2 (receiver=0x55bb3e093030, event=0x7ffc948677b0) at ../../include/QtCore/5.15.0/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#27 0x00007f81ddbc1f78 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x55bb3bc482e0) at kernel/qguiapplication.cpp:2214
#28 0x00007f81ddbc35b5 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x55bb3bc482e0) at kernel/qguiapplication.cpp:1946
#29 0x00007f81ddb9b2cb in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1175
#30 0x00007f81d9c6799e in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#31 0x00007f81dd122fbd in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f81dd123240 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f81dd1232e3 in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f81df72ae92 in QEventDispatcherGlib::processEvents (this=0x55bb3b53c850, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007f81df6cf1bb in QEventLoop::exec (this=this@entry=0x7ffc94867b50, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#36 0x00007f81df6d7354 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x00007f81e0471fff in kdemain () from /usr/lib/x86_64-linux-gnu/libkdeinit5_karbon.so
#38 0x00007f81e02a30b3 in __libc_start_main (main=0x55bb3ab2f060, argc=1, argv=0x7ffc94867d48, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffc94867d38) at ../csu/libc-start.c:308
#39 0x000055bb3ab2f09e in _start ()
[Inferior 1 (process 175521) detached]

Possible duplicates by query: bug 426596, bug 426090, bug 425658, bug 425619, bug 425334.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2021-01-17 19:14:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/calligra/-/merge_requests/8
Comment 2 Anthony Fieroni 2021-01-18 09:25:15 UTC
Git commit 9cb5daccc97bd615cc39f09254f46d0fd6fb0abc by Anthony Fieroni.
Committed on 17/01/2021 at 19:09.
Pushed by danders into branch 'master'.

Remove duplicated actions provided by parent view

Signed-off-by: Anthony Fieroni <bvbfan@abv.bg>

M  +6    -67   karbon/ui/KarbonView.cpp
M  +0    -4    karbon/ui/KarbonView.h

https://invent.kde.org/office/calligra/commit/9cb5daccc97bd615cc39f09254f46d0fd6fb0abc
Comment 3 Anthony Fieroni 2021-01-19 05:55:47 UTC
Git commit 106fe0496bc197d4b60d8b5a46a5e9d6b16cf6d4 by Anthony Fieroni.
Committed on 19/01/2021 at 05:55.
Pushed by anthonyfieroni into branch 'calligra/3.2'.

Remove duplicated actions provided by parent view

Signed-off-by: Anthony Fieroni <bvbfan@abv.bg>

M  +6    -67   karbon/ui/KarbonView.cpp
M  +0    -4    karbon/ui/KarbonView.h

https://invent.kde.org/office/calligra/commit/106fe0496bc197d4b60d8b5a46a5e9d6b16cf6d4
Comment 4 Felix Urbasik 2023-03-09 08:49:19 UTC
Created attachment 157138 [details]
New crash information added by DrKonqi

karbon (3.2.1) using Qt 5.15.8

I was editing an SVG file with two objects in it that were overlapping almost exactly. Therefore I couldn't select the bottom object. I pressed CTRL+A to "Select All" and Karbon crashed immediately.

-- Backtrace (Reduced):
#4  0x00007f62e68c124a in KoShapeContainer::shapes() const () from /usr/lib/libflake.so.17
#5  0x00007f62d84c915c in KarbonView::editSelectAll() () from /usr/lib/libkarbonui.so.17
[...]
#7  0x00007f62e776bec7 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#8  0x00007f62e77718c7 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#9  0x00007f62e777198e in QAction::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5