Remove duplicated actions provided by parent view

BUG: 426801

Signed-off-by: Anthony Fieroni <bvbfan@abv.bg>